
Increased modifier limit to 10,000 in rcontrib.

Fixed issues with glrad and added zoom response to mouse wheel input.

Added missing definition of "ashik2" material type to reference manual.

Changed genBSDF to calculate device thickness assuming Zmax==0 so
pkgBSDF will generate correct proxy geometry.

Created pabopto2xyz tool to combine different sensor measurements
into a single CIE-XYZ measurement file for color BSDF interpolation.

Jan Wienold updated evalglare to version 1.30

Roland Schregle added out-of-core photon mapping routines, which
may be compiled using the PMAP_OOC macro.

Added -a option to getinfo for easy addition of header lines.

Fixed issue with multiple records on picture output in rcontrib (and rfluxmtx).
Credit to Sarith Subramaniam for pointing out the problem.

Made mkillum more tolerant of non-planar polygons in its sampling routines.

Added "-recover" option to genBSDF to pick up where it left off.

Fixed genBSDF issue that was created incorrect normalization of
Klems output.  Thanks to David G-M and Christian Knoflach for
discovering the error.  Also improved sampling of indirect irradiance
that showed some slight bias due to poor sample collision avoidance.

Fixed long-standing issue with -aa 0 neglecting textures in calculating
surface shading.

Fixed bug in ranimove introduced during photon map integration.

Added check for steep sections of BSDF in pabopto2bsdf, creating narrower
peakes in those places and mitigating some normalization issues.

Added view360stereo.cal by Mark Stock to handle 360-degree over/under
stereo views.

Added MAX2SHADE macro to place limit on number of light sources
to precheck for obstructions.  (Currently set to 200.)  This
avoids excessive start-up times for scenes with many light sources.
Thanks to Axel Jacobs for pointing out the problem.

Added -v option to obj2mesh to print out mesh statistics.

Rewrote bsdf2rad from ground up and made it a standard part of build.