@@ -2140,3 +2140,5 @@ Thanks to Axel Jacobs for pointing out the problem.
 Added -v option to obj2mesh to print out mesh statistics.
 
 Rewrote bsdf2rad from ground up and made it a standard part of build.
+
+Fixed bug in orientation of Reinhart/Tregenza sample generator in rfluxmtx.
